--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "helmet-csp": "^3.4.0",
     "http-errors": "~1.6.3",
     "https": "^1.0.0",
+    "ipfs-core": "^0.18.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nunjucks": "^3.2.3"
   },
   "devDependencies": {
