--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node init.js"
+    "start": "nodemon init.js"
   },
   "type": "commonjs",
   "dependencies": {
