--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^5.11.15",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
