--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
     "nunjucks": "^3.2.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
